crates/fittle-cli/tests/snapshots/corpus__edge__long-strings-hierarch.fits.snap
---
source: crates/fittle-cli/tests/corpus.rs
expression: json
---
{
  "file_bytes": 11520,
  "hdus": [
    {
      "bitpix": 16,
      "cards": [
        {
          "comment": "conforms to FITS standard",
          "keyword": "SIMPLE",
          "raw": [
            "SIMPLE  =                    T / conforms to FITS standard                      "
          ],
          "record": 0,
          "type": "logical",
          "value": true
        },
        {
          "comment": "array data type",
          "keyword": "BITPIX",
          "raw": [
            "BITPIX  =                   16 / array data type                                "
          ],
          "record": 1,
          "type": "integer",
          "value": 16
        },
        {
          "comment": "number of array dimensions",
          "keyword": "NAXIS",
          "raw": [
            "NAXIS   =                    2 / number of array dimensions                     "
          ],
          "record": 2,
          "type": "integer",
          "value": 2
        },
        {
          "keyword": "NAXIS1",
          "raw": [
            "NAXIS1  =                   64                                                  "
          ],
          "record": 3,
          "type": "integer",
          "value": 64
        },
        {
          "keyword": "NAXIS2",
          "raw": [
            "NAXIS2  =                   48                                                  "
          ],
          "record": 4,
          "type": "integer",
          "value": 48
        },
        {
          "keyword": "OBJECT",
          "raw": [
            "OBJECT  = 'Sh2-129 Flying Bat and Ou4 Squid'                                    "
          ],
          "record": 5,
          "type": "string",
          "value": "Sh2-129 Flying Bat and Ou4 Squid"
        },
        {
          "keyword": "NOTES",
          "raw": [
            "NOTES   = 'Imaged over six nights from a Bortle 4 site; clouds on night five. &'",
            "CONTINUE  'Focus touched up twice. Guiding RMS 0.6 arcsec average.'             "
          ],
          "record": 6,
          "type": "string",
          "value": "Imaged over six nights from a Bortle 4 site; clouds on night five. Focus touched up twice. Guiding RMS 0.6 arcsec average."
        },
        {
          "hierarch": true,
          "keyword": "ESO DET CHIP NAME",
          "raw": [
            "HIERARCH ESO DET CHIP NAME = 'CCD-44  '                                         "
          ],
          "record": 8,
          "type": "string",
          "value": "CCD-44"
        },
        {
          "hierarch": true,
          "keyword": "FITTLE TEST LONGKEY",
          "raw": [
            "HIERARCH FITTLE TEST LONGKEY = 42                                               "
          ],
          "record": 9,
          "type": "integer",
          "value": 42
        },
        {
          "keyword": "BSCALE",
          "raw": [
            "BSCALE  =                    1                                                  "
          ],
          "record": 10,
          "type": "integer",
          "value": 1
        },
        {
          "keyword": "BZERO",
          "raw": [
            "BZERO   =                32768                                                  "
          ],
          "record": 11,
          "type": "integer",
          "value": 32768
        },
        {
          "keyword": "COMMENT",
          "raw": [
            "COMMENT Synthetic file exercising CONTINUE and HIERARCH conventions.            "
          ],
          "record": 12,
          "type": "commentary",
          "value": "Synthetic file exercising CONTINUE and HIERARCH conventions."
        }
      ],
      "data_bytes": 6144,
      "data_offset": 2880,
      "header_blocks": 1,
      "header_offset": 0,
      "index": 0,
      "kind": "primary",
      "shape": [
        64,
        48
      ]
    }
  ],
  "issues": [],
  "path": "edge/long-strings-hierarch.fits",
  "schema": "fittle.header/1"
}
